--- a/css/style.scss
+++ b/css/style.scss
@@ -809,23 +809,32 @@ tr.selected td {
     z-index: 9999;
 }
 
-.category-line .category-sharing-dialogue {
-    width: 100%;
-    background: var(--color-background-dark);
-    padding: 0.7rem;
-    display: none;
+.favorite-share-link-clipboard-button {
+  display: none;
+  position: absolute;
+  right: 0;
 
-    .category-sharing-link {
-        margin-top: 0.7rem;
-        width: 100%;
-        display: none;
-
-        &.visible {
-            display: block;
-        }
-    }
-}
-
-.category-line.sharingDialogueVisible .category-sharing-dialogue {
+  &.visible {
     display: block;
+  }
+
+  &.tooltip-visible .copied-tooltip {
+    opacity: .9;
+    transform: translate(-50%, 0);
+  }
+
+  .copied-tooltip {
+    position: absolute;
+    bottom: calc(100% - 10px);
+    line-height: normal;
+    left: 50%;
+    transition: transform .2s, opacity .2s;
+    transform: translate(-50%, 5px);
+    opacity: 0;
+    margin: auto;
+    background: #222;
+    color: #fff;
+    padding: 4px;
+    border-radius: 2px;
+  }
 }
