reduce favorite tooltip width
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -414,7 +414,8 @@ tr.selected td {
 }
 
 .leaflet-marker-favorite-tooltip {
-    width: 300px;
+    min-width: 200px;
+    max-width: 300px;
 }
 
 .leaflet-marker-contact-tooltip p {
