fix cursor style for mapboxgl map when dragging and during controllers actions
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -125,6 +125,12 @@
     background: var(--color-main-background);
     font-family: var(--font-face);
 }
+.mapboxgl-map {
+    cursor: grab;
+}
+.leaflet-drag-target {
+    cursor: move !important;
+}
 
 .leaflet-control-layers-base {
     line-height: 30px;
