--- a/css/style.scss
+++ b/css/style.scss
@@ -436,6 +436,7 @@ tr.selected td {
     opacity: 1 !important;
     background-color: var(--color-main-background);
     color: var(--color-main-text);
+    min-width: 150px;
 }
 .leaflet-marker-photo-tooltip {
     padding: 1px;
