Menu entries for managing MyMaps
Signed-off-by: Arne Hamann <kontakt+github@arne.email>

--- a/css/style.scss
+++ b/css/style.scss
@@ -562,7 +562,8 @@ tr.selected td {
 	padding-right: 0;
 }
 #devicecolorinput,
-#trackcolorinput {
+#trackcolorinput,
+#mymapscolorinput {
     opacity: 0;
     width: 0px;
     height: 0px;
