Menu entries for managing MyMaps
Signed-off-by: Arne Hamann <kontakt+github@arne.email>

--- a/css/style.scss
+++ b/css/style.scss
@@ -749,7 +749,8 @@ tr.selected td {
     z-index: 10001;
 }
 #devicecolorinput,
-#trackcolorinput {
+#trackcolorinput,
+#mymapscolorinput {
     opacity: 0;
     width: 0px;
     height: 0px;
