--- a/css/style.scss
+++ b/css/style.scss
@@ -5,10 +5,13 @@
 
 #app-navigation > ul > li.active,
 #app-navigation > ul > li a.active,
+#app-navigation > ul > li > ul > li.active,
+#app-navigation > ul > li > ul > li.active > a,
 #app-navigation > ul > li.active > a {
     background-color: var(--color-main-background) !important;
 }
 
+#app-navigation > ul > li > ul > li.active:hover,
 #app-navigation > ul > li > ul > li:hover > a.active {
     background-color: var(--color-background-hover) !important;
 }
@@ -216,8 +219,8 @@
     display: none;
 }
 
-#opening-hours-table-toggle-expand {
-}
+/*#opening-hours-table-toggle-expand {
+}*/
 
 #app {
     width: 100%;
@@ -262,9 +265,8 @@
     color: #ffcc44;
 }
 
-.poi-opens {
-
-}
+/*.poi-opens {
+}*/
 
 .opening-hours-table .opening-hours-day {
     padding-right: 5px;
