--- a/css/style.scss
+++ b/css/style.scss
@@ -63,7 +63,9 @@
 #route-submit i {
     color: var(--color-main-text);
 }
-
+.leaflet-routing-geocoder-result tr {
+	line-height: 35px;
+}
 .no-routing-engine-warning {
     padding: 10px 10px 0 10px;
     a {
