--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,3 @@
-#app-navigation-toggle {
-    background-color: var(--color-background-darker);
-    z-index: 100000;
-}
-
 #app-navigation > ul > li.active,
 #app-navigation > ul > li a.active,
 #app-navigation > ul > li > ul > li.active,
@@ -34,35 +29,20 @@
     padding-right: 80px;
     text-overflow: ellipsis;
 }
+.app-navigation-toggle {
+    display: none;
+}
 @media only screen and (max-width: $breakpoint-mobile) {
     // Account for navigation menu toggle on the top left
     #search-term,
     .leaflet-routing-container {
         margin-left: 44px !important;
     }
+    .app-navigation-toggle {
+        display: block;
+    }
 }
 
-#search-submit {
-    position: absolute;
-    padding: 10px 19px;
-    top: -2px;
-    right: 38px;
-    margin: 0;
-    border: none;
-    background-color: transparent;
-}
-#route-submit {
-    position: absolute;
-    padding: 10px 19px;
-    right: 0;
-    top: -2px;
-    margin: 0;
-    border: none;
-    background-color: transparent;
-}
-#route-submit i {
-    color: var(--color-main-text);
-}
 .leaflet-routing-geocoder-result tr {
 	line-height: 35px;
 }
