big fight with @raruto/leaflet.elevation, works but still loads d3 from unpkg.com
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/style.scss
+++ b/css/style.scss
@@ -619,3 +619,21 @@ tr.selected td {
     border-radius: 2px;
   }
 }
+
+.elevation-control {
+	width: 700px !important;
+}
+
+.elevation-summary {
+    > span {
+        margin-right: 10px;
+    }
+}
+
+.elevation-toggle {
+    width: 44px !important;
+    height: 44px !important;
+    right: -50px !important;
+    top: 1px !important;
+    background-size: 25px !important;
+}
