--- a/css/style.scss
+++ b/css/style.scss
@@ -372,6 +372,9 @@ tr.selected td {
 .leaflet-marker-device {
 	box-shadow: 0px 0px 10px #888;
 }
+.leaflet-marker-track.selected {
+	box-shadow: 0px 0px 10px #ff0000;
+}
 .leaflet-marker-photo {
     border: 2px solid var(--color-main-background);
 }
