Add padding on icons/name
Fix #647

Signed-off-by: Robin Fourcade <29704178+RobinFrcd@users.noreply.github.com>

--- a/css/style.scss
+++ b/css/style.scss
@@ -862,3 +862,7 @@ tr.selected td {
     border-radius: 2px;
   }
 }
+
+.device-name, .category-name, .icon-picture, .track-name {
+    padding-left: 44px !important;
+}
