support openstreetmap vector tiles with maplibre-gl-js
Signed-off-by: Benstone Zhang <benstonezhang@gmail.com>

--- a/css/adminSettings.css
+++ b/css/adminSettings.css
@@ -3,7 +3,8 @@
 #osrmFootURL,
 #graphhopperURL,
 #graphhopperAPIKEY,
-#mapboxAPIKEY
+#mapboxAPIKEY,
+#maplibreStreetStyleURL
 {
     width: 400px;
 }
