add basic auth support for map server
Signed-off-by: Benstone Zhang <benstonezhang@gmail.com>

--- a/css/adminSettings.css
+++ b/css/adminSettings.css
@@ -4,7 +4,8 @@
 #graphhopperURL,
 #graphhopperAPIKEY,
 #mapboxAPIKEY,
-#maplibreStreetStyleURL
+#maplibreStreetStyleURL,
+#maplibreStreetStyleAuth
 {
     width: 400px;
 }
